[package]
name = "link_eternal"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic-reflection = "0.9.2"
uuid = { version = "1.3.4", features = ["v4"] }
tantivy = "0.20.2"
thiserror = "1.0.40"

[build-dependencies]
tonic-build = "0.9"
